# chaos

./: .gitignore  Makefile  Makefile.conf  Makefile.in  README.md  config.h  config.status  configure  configure.ac  crefs.bib  readme.  set-mozilla-homepage.sh
autom4te.cache/: output.1  requests  traces.1
cpp/: bitwise_class.cc  char_ptr.cpp  compile_time_table.cc  custom_iterator.cpp  flag_enums.cc  foo.cc  generic_print_class.cc  grid.cc  igs_log_parser.cc  implicit_casts.cc  margprs.cc  matrix.cc  old-grid.cc  qr.cc  structured_bindings.cpp  structured_bindings_2.cpp  template_enable_if.cpp  template_fun_dispatch.cc  trig_functions.cc  user_defined_lits.cpp  vector_find.cpp
d3js/: addneq.csv  addneq.json  antex.html  antex.json  (+10 more)
examples/: Makefile  Makefile.am  Makefile.in  testReceiver  testSatSys  test_receiver.cpp  test_satsys.cpp
examples/.deps/: testReceiver-test_receiver.Po  testSatSys-test_satsys.Po
src/: Makefile  Makefile.am  Makefile.in  antenna.cpp  antenna.hpp  c++template.head  gnssobs.cpp  gnssobs.hpp  koko.cpp  receiver.cpp  receiver.hpp  satsys.cpp  satsys.hpp
src/.deps/: libngpt_a-antenna.Po  libngpt_a-receiver.Po
src/datetime/: cal2jd.cpp  d2dtf.cpp  dates.hpp  dttmcon.hpp  jd2cal.cpp
src/geodesy/: car2ell.hpp  car2top.hpp  ell2car.cpp  ell2car.hpp  ellipsoid.hpp  top2daz.cpp
src/gnss/: antenna.cpp  antenna.hpp  flags.hpp  gstructs.cpp  makefile  receiver.hpp  satsys.cpp
src/math/: cspline.cpp  intext.hpp  makefile  ratintrp.cpp
src/rinex/ObsRinex/: rdrnxhdr_v2x.cpp
src/rinex/Rinex/: rinex.hpp
src/utils/: rdbckws.cpp
(+167 files in other folders)
