lib_LIBRARIES = libngpt.a

## Only use the following flags for debuging purposes
libngpt_a_CXXFLAGS = -std=c++11 -g -Wall -Wextra -Werror -pedantic -W -Wshadow -Winline -Wdisabled-optimization

dist_include_HEADERS = receiver.hpp \
					   antenna.hpp \
					   satsys.hpp \
					   gnssobs.hpp

dist_libngpt_a_SOURCES = receiver.cpp \
						 antenna.cpp \
						 satsys.cpp \
						 gnssobs.cpp
